@@ -67,7 +67,7 @@ void Appl::printArgs()
 	if (m_argTxt.size() != 0)
 		std::cerr << " " << m_argTxt;
 
-	std::cerr << std::endl << std::endl;
+	std::cerr << std::endl << std::endl << "Options:" << std::endl << std::endl;
 
 	for (a_it = m_args.begin(); a_it < m_args.end(); a_it++) {
 		const char* c = (strlen(a_it->shortname) == 1) ? a_it->shortname : " ";
